--- a/components/Header.scss
+++ b/components/Header.scss
@@ -11,6 +11,10 @@
   justify-content: space-between;
   z-index: 10;
   transform: translate3d(0px, 0px, 0px);
+  .anchor{
+    position: absolute;
+    bottom: 0px;
+  }
   #menu-language{
     z-index: 20;
   }
