--- a/components/Rates.scss
+++ b/components/Rates.scss
@@ -4,6 +4,15 @@
   padding: 30px 20px 50PX;
   background: $accent;
   color: white;
+  h2 {
+    margin-top: 0;
+    font-weight: normal;
+    text-transform: uppercase;
+    font-size: 2rem;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 20px;
+  }
   h3{
     text-align: center;
     margin: 0;
