--- a/components/Skills.scss
+++ b/components/Skills.scss
@@ -31,4 +31,13 @@
       text-align: center;
     }
   }
+  h2 {
+    margin-top: 0;
+    font-weight: normal;
+    text-transform: uppercase;
+    font-size: 2rem;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
