--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,6 +3,7 @@
 $black: #202020;
 $darkgrey: #3F3F3F;
 $lightgrey: #f1f0f0;
+$grey: rgb(194, 202, 218);
 $accent: #055d6d;
 $accent2: #028054;
 $accent3: #335f67;
