--- a/styles/global.scss
+++ b/styles/global.scss
@@ -77,3 +77,25 @@ body {
   color: $yellow;
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: $accent $grey;
+}
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 14px;
+}
+
+*::-webkit-scrollbar-track {
+  background: $grey;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: $accent;
+  border-radius: 12px;
+  border: 2px solid $grey;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: $accent;
+}
