--- a/components/Header.scss
+++ b/components/Header.scss
@@ -11,6 +11,7 @@
   justify-content: space-between;
   z-index: 10;
   transform: translate3d(0px, 0px, 0px);
+  
   .anchor{
     position: absolute;
     bottom: 0px;
@@ -38,6 +39,8 @@
     height: 100%;
     justify-content: flex-end;
     align-items: center;
+    padding-right: 1rem;
+
     @media screen AND (min-width: 769px) {
       height: 100%;
     }
@@ -130,9 +133,12 @@
     align-items: center;
     justify-content: flex-start;
     height: 30%;
-    div{
+    div, a{
       font-size: 1.6rem;
       padding: 1rem 0;
+      &:last-child{
+        padding: 1rem 0;
+      }
     }
   }
   .buttons-container {
