--- a/components/Footer.scss
+++ b/components/Footer.scss
@@ -1,3 +1,5 @@
+@import "../styles/variables";
+
 .footer {
   width: calc(100% - 6rem);
   padding: 3rem;
@@ -40,6 +42,9 @@
 .footer-link{
   color: black;
   text-decoration: none;
+  background-color: $white;
+  
+  
 }
 .social{
   color: white;
@@ -65,6 +70,13 @@
   height: 28px;
   padding: 5px;
   border-radius: 50%;
+  transition-property: background-color, color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+  &:hover{
+    color: $white;
+    background-color: $accent;
+  }
 }
 
 .links{
