--- a/components/Hero.scss
+++ b/components/Hero.scss
@@ -83,18 +83,22 @@
       justify-content: center;
       align-items: center;
       background-color: $white;
-      color: $black;
+      color: $accent;
+      font-size: 2rem;;
       width: 28px;
       height: 28px;
-      border-radius: 50%;
-      transition-property: background-color, color;
+      border-radius: 5px;
+      transform:rotate(0deg);
+      transition-property: background-color, color, font-size, transform;
       transition-duration: 0.2s;
       transition-timing-function: ease-in-out;
     }
     &:hover{
       a {
-        background: $black;
-        color: white;
+        background: $grey;
+        color: $accent;
+        font-size: 2.5rem;
+        transform:rotate(360deg);
       }
     }
   }
